Modify home page

--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CSISD-Tolling-System</title>
+    <title>@ViewData["Title"] - Nordic Tolling Service</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
