--- a/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using CSISD_Tolling_System.Models
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <ul class="navbar-nav">
