--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/_Host.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/_Host.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSISD-Tolling-System</title>
+    <title>Nordic Tolling Service</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
