Removed the IdentityUser and switched with our custom Identity User

--- a/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @using Microsoft.AspNetCore.Identity
+@using CSISD_Tolling_System.Models
 @attribute [IgnoreAntiforgeryToken]
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<User> SignInManager
 @functions {
     public async Task<IActionResult> OnPost()
     {
