Fix bugs and add required classes

--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
     </div>
     <footer class="footer border-top text-muted">
         <div class="container">
-            &copy; 2022 - CSISD-Tolling-System - <a asp-area="" asp-page="Privacy">Privacy</a>
+            &copy; 2022 - Nordic Tolling Service - <a asp-area="" asp-page="Privacy">Privacy</a>
         </div>
     </footer>
 
