--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
@@ -1,39 +1,47 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using CSISD_Tolling_System.Data
+@using Microsoft.AspNetCore.Http
 @page "/"
-
-@code {
-    int userId = 1;
-}
+@inject IHttpContextAccessor httpContextAccessor
+@inject ApplicationDbContext db
 
 <AuthorizeView Roles="road-user">
     <Authorized>
         <div class="container">
-            <h5>Customer ID: </h5>
-            <table class="table table-hover mt-1 table-sm">
+            <h7 class="mb-5 font-weight-bold">Customer ID: @customerId</h7>
+            <table class="table table-hover table-bordered mt-1 table-sm">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th class="text-center" colspan="5">Toll History</th>
+                    </tr>
+                    <tr>
+                        <th scope="col">Date</th>
+                        <th scope="col">Entry</th>
+                        <th scope="col">Exit</th>
+                        <th scope="col">Charge</th>
+                        <th scope="col">Paid</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                     </tr>
                 </tbody>
@@ -64,3 +72,17 @@
         </section>
     </NotAuthorized>
 </AuthorizeView>
+
+@code {
+    private string customerId;
+
+    protected override void OnInitialized()
+    {
+
+        string userName = httpContextAccessor.HttpContext.User.Identity.Name;
+        if (userName != null)
+        {
+            customerId = db.Users.Where(x => x.Email == userName).FirstOrDefault().Id;
+        }
+    }
+}
