--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/_Host.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/_Host.cshtml
@@ -2,6 +2,10 @@
 @namespace CSISD_Tolling_System.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@{ 
+    ViewBag.Title = "Home";
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
