--- a/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-
+<partial name="Pages/Shared/LoginDisplay.razor" />
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
