--- a/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
+<partial name="../Shared/_LoginPartial" />
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-6">
