--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
@@ -1,7 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@page "/"
+@using Microsoft.AspNetCore.Identity
 @using CSISD_Tolling_System.Data
 @using Microsoft.AspNetCore.Http
-@page "/"
 @inject IHttpContextAccessor httpContextAccessor
 @inject ApplicationDbContext db
 
