--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
@@ -1,9 +1,11 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Identity
 @using CSISD_Tolling_System.Data
+@using CSISD_Tolling_System.Data.Service
 @using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor httpContextAccessor
 @inject ApplicationDbContext db
+@inject InvoiceService invoiceService
 
 <AuthorizeView Roles="road-user">
     <Authorized>
@@ -15,7 +17,6 @@
                         <th class="text-center" colspan="5">Toll History</th>
                     </tr>
                     <tr>
-                        <th scope="col">Date</th>
                         <th scope="col">Entry</th>
                         <th scope="col">Exit</th>
                         <th scope="col">Charge</th>
@@ -23,27 +24,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
+                    @{
+                        var invoices = invoiceService.getUserInvoices(customerId);
+                        foreach (var invoice in invoices)
+                        {
+                            <tr>
+                                <td>@invoice.EntryTimestamp</td>
+                                <td>@invoice.ExitTimestamp</td>
+                                <td>@invoice.Fee</td>
+                                <td>@(invoice.Paid ? "✔" : "❌")</td>
+                            </tr>
+                        }
+                    }
                 </tbody>
             </table>
         </div>
@@ -51,6 +43,12 @@
 </AuthorizeView>
 
 <AuthorizeView Roles="toll-operator">
+    <Authorized>
+
+    </Authorized>
+</AuthorizeView>
+
+<AuthorizeView Roles="admin">
     <Authorized>
 
     </Authorized>
