--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
     </environment>
     <link rel="stylesheet" href="~/Identity/css/site.css" />
+    <link rel="stylesheet" href="~/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="~/css/Styles.min.css" />
 </head>
 <body>
     <header>@*
