--- a/CSISD-Tolling-System/CSISD-Tolling-System/wwwroot/css/Styles.scss
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/wwwroot/css/Styles.scss
@@ -1,2 +1,19 @@
-﻿body {
+﻿.container {
+    max-width: 1260px !important;
+    .topSection {
+        margin-top: 30px;
+        .stockPhoto {
+            width: 100%;
+            height: 100%;
+        }
+        #languages-select {
+            width: 90%;
+            margin: 15px 20px 0px 0px;
+        }
+        a {
+            float: right;
+            margin-top: 10px;
+            margin-right: 10px;
+        }
+    }
 }
