--- a/CSISD-Tolling-System/CSISD-Tolling-System/Shared/LoginDisplay.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Shared/LoginDisplay.razor
@@ -40,4 +40,12 @@
             </Authorized>
          
         </AuthorizeView>
+
+    <AuthorizeView Roles ="admin">
+        <Authorized>
+
+
+        </Authorized>
+
+    </AuthorizeView>
  
