--- a/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,10 +4,13 @@
 @{
     ViewData["Title"] = "Log in";
 }
-<partial name="../Shared/_LoginPartial" />
+@{
+    <NavMenu />
+}
 
 
 <h1>@ViewData["Title"]</h1>
+
 <div class="row">
     <div class="col-md-6">
         <section>
