--- a/CSISD-Tolling-System/CSISD-Tolling-System/Shared/MainLayout.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Shared/MainLayout.razor
@@ -6,11 +6,8 @@
 -->
 
 <div class="main">
-    <div class="top-row px-4">
-        <LoginDisplay />
-
-        <a href="https://docs.microsoft.com/en-us/aspnet/" target="_blank">About</a>
-    </div>
+    <NavMenu />
+    
 
     <div class="content px-4">
         @Body
