--- a/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
+++ b/CSISD-Tolling-System/CSISD-Tolling-System/Pages/Index.razor
@@ -11,10 +11,10 @@
     <Authorized>
         <div class="container">
             <h7 class="mb-5 font-weight-bold">Customer ID: @customerId</h7>
-            <table class="table table-hover table-bordered mt-1 table-sm">
+            <table class="table table-hover table-bordered mt-2 table-sm">
                 <thead>
                     <tr>
-                        <th class="text-center" colspan="5">Toll History</th>
+                        <th class="text-center" colspan="4">Toll History</th>
                     </tr>
                     <tr>
                         <th scope="col">Entry</th>
@@ -25,13 +25,13 @@
                 </thead>
                 <tbody>
                     @{
-                        var invoices = invoiceService.getUserInvoices(customerId);
+                        var invoices = invoiceService.getUserUnpaidInvoices(customerId);
                         foreach (var invoice in invoices)
                         {
                             <tr>
                                 <td>@invoice.EntryTimestamp</td>
                                 <td>@invoice.ExitTimestamp</td>
-                                <td>@invoice.Fee</td>
+                                <td>£@invoice.Fee</td>
                                 <td>@(invoice.Paid ? "✔" : "❌")</td>
                             </tr>
                         }
@@ -44,13 +44,48 @@
 
 <AuthorizeView Roles="toll-operator">
     <Authorized>
-
+        <div class="container">
+            <table class="table table-hover table-bordered mt-2 table-sm">
+                <thead>
+                    <tr>
+                        <th class="text-center" colspan="6">Unpaid User Tolls</th>
+                    </tr>
+                    <tr>
+                        <th scope="col">User Email</th>
+                        <th scope="col">User ID</th>
+                        <th scope="col">Entry</th>
+                        <th scope="col">Exit</th>
+                        <th scope="col">Charge</th>
+                        <th scope="col">Paid</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{
+                        var invoices = invoiceService.getAllUnpaidInvoices();
+                        foreach (var invoice in invoices)
+                        {
+                            string userEmail = db.Users.Where(x => x.Id == invoice.UserId).First().Email;
+                            <tr>
+                                <td>@userEmail</td>
+                                <td>@invoice.UserId</td>
+                                <td>@invoice.EntryTimestamp</td>
+                                <td>@invoice.ExitTimestamp</td>
+                                <td>£@invoice.Fee</td>
+                                <td>@(invoice.Paid ? "✔" : "❌")</td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
     </Authorized>
 </AuthorizeView>
 
 <AuthorizeView Roles="admin">
     <Authorized>
-
+        <div class="container">
+            <h2>You are an admin</h2>
+        </div>
     </Authorized>
 </AuthorizeView>
 
