--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CSISD_Tolling_System.Models
+@using CSISD_Toll_Operator_Assignment.Models
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
