--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using CSISD_Toll_Operator_Assignment.Areas.Identity
 @using CSISD_Toll_Operator_Assignment.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using CSISD_Tolling_System.Models
+@using CSISD_Toll_Operator_Assignment.Models
