--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
@@ -9,7 +9,7 @@
     <table class="table table-hover table-bordered mt-2 table-sm">
         <thead>
             <tr>
-                <th class="text-center" colspan="4">Toll History</th>
+                <th class="text-center" colspan="4">Unpaid Tolls</th>
             </tr>
             <tr>
                 <th scope="col">Entry</th>
@@ -27,7 +27,8 @@
                         <td>@invoice.ExitTimestamp</td>
                         <td>£@invoice.Fee</td>
                         <td>
-                            <form asp-controller="Demo" asp-action="Register" method="post">
+                            <form asp-controller="Toll" asp-action="Payment" method="post">
+                                <input type="hidden" name="invoiceId" value="@invoice.Id" />
                                 <div class="d-flex justify-content-between align-items-center">
                                     @(invoice.Paid ? "✔" : "❌")
                                     <button class="btn btn-sm btn-primary ml-5">Pay</button>
