--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -1,5 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using CSISD_Toll_Operator_Assignment.Models
+@model PaymentViewModel 
 @{
+    ViewData["Title"] = "Pay Invoice";
 }
+
+<h1>@ViewData["Title"]</h1>
+
+<div class="container">
+    <form asp-controller="Toll" asp-action="Pay" method="post">
+        
+    </form>
+</div>
