--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
@@ -6,7 +6,8 @@
 
 <div class="container">
     <h7 class="mb-5 font-weight-bold">Customer ID: @Model.userId</h7>
-    <table class="table table-hover table-bordered mt-2 table-sm">
+    <hr />
+    <table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
         <thead>
             <tr>
                 <th class="text-center" colspan="4">Unpaid Tolls</th>
