--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container">
-    <table class="table table-hover table-bordered mt-2 table-sm">
+    <table id="data-table" class="table table-hover table-bordered mt-2 table-sm">
         <thead>
             <tr>
                 <th class="text-center" colspan="6">Unpaid User Tolls</th>
