--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -9,29 +9,13 @@
 <div class="container">
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.Id)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.Fee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.UserId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.VehicleId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.EntryTimestamp)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.ExitTimestamp)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.invoice.Paid)
-                </td>
-            </tr>
+                <p>@item.invoice.Id</p>
+                <p>@item.invoice.Fee</p>
+                <p>@item.invoice.UserId</p>
+                <p>@item.invoice.EntryTimestamp</p>
+                <p>@item.invoice.ExitTimestamp</p>
+                <p>@item.invoice.VehicleId</p>
+                <p>@item.invoice.Paid</p>
             }
     <form asp-controller="Toll" asp-action="Pay" method="post">
         <p>Total: </p>
@@ -39,7 +23,10 @@
         <select name="cards" id="cards">
             @foreach (var item in Model)
             {
-            <option value="@Html.DisplayFor(modelItem => item.card.CardNumber)">@Html.DisplayFor(modelItem => item.card.CardNumber)</option>
+                foreach (var card in item.cards)
+                {
+                    <option value="@Html.DisplayFor(modelItem => card.CardNumber)">@Html.DisplayFor(modelItem => item.card.CardNumber)</option>
+                }
             }
         </select>
         <label for="cvv">CVV:</label>
