--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -25,7 +25,7 @@
             {
                 foreach (var card in item.cards)
                 {
-                    <option value="@Html.DisplayFor(modelItem => card.CardNumber)">@Html.DisplayFor(modelItem => item.card.CardNumber)</option>
+                    <option value="@Html.DisplayFor(modelItem => card.CardNumber)">@Html.DisplayFor(modelItem => card.CardNumber)</option>
                 }
             }
         </select>
