--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -7,23 +7,30 @@
 <h1>@ViewData["Title"]</h1>
 
 <div class="container">
-    <p>@Model.invoice.Id</p>
-    <p>@Model.invoice.Fee</p>
-    <p>@Model.invoice.UserId</p>
-    <p>@Model.invoice.EntryTimestamp</p>
-    <p>@Model.invoice.ExitTimestamp</p>
-    <p>@Model.invoice.VehicleId</p>
-    <p>@Model.invoice.Paid</p>
-    <form asp-controller="Toll" asp-action="Pay" method="post">
-        <p>Total: </p>
-        <label for="cards">Select card</label>
-        <select name="cards" id="cards">
-            @foreach (var item in Model.cards)
-            {
-             <option value="@Html.DisplayFor(modelItem => item.CardNumber)">@Html.DisplayFor(modelItem => item.CardNumber)</option>
-            }
-        </select>
-        <label for="cvv">CVV:</label>
-        <input id="cvv" name="cvv" type="text" placeholder="Enter your cvv" />
-    </form>
+    <div class="row">
+        <div class="col-sm-6">
+            <p>Invoice ID: @Model.invoice.Id</p>
+            <p>Fee: @Model.invoice.Fee</p>
+            <p>CustomerID: @Model.invoice.UserId</p>
+            <p>Entry Timestamp: @Model.invoice.EntryTimestamp</p>
+            <p>Exit Timestamp: @Model.invoice.ExitTimestamp</p>
+            <p>Vehicle Reg Plate: @Model.vehicle.RegistrationPlate</p>
+            <p>Invoice Paid? @Model.invoice.Paid</p>
+        </div>
+        <div class="col-sm-6">
+            <form asp-controller="Toll" asp-action="Pay" method="post">
+                <p>Total: </p>
+                <label for="cards">Select card</label>
+                <select name="cards" id="cards">
+                    @foreach (var item in Model.cards)
+                    {
+                     <option value="@Html.DisplayFor(modelItem => item.CardNumber)">@Html.DisplayFor(modelItem => item.CardNumber)</option>
+                    }
+                </select>
+                <label for="cvv">CVV:</label>
+                <input id="cvv" name="cvv" type="text" placeholder="Enter your cvv" />
+                <input class="btn btn-success" type="submit" value="Pay" />
+            </form>
+        </div>
+    </div>
 </div>
