--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Payment.cshtml
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group">
                     <input class="btn btn-success" type="submit" value="Pay" />
-                    <a class="btn btn-primary" asp-controller="Toll" asp-action="">Add New Card</a>
+                    <a class="btn btn-primary" asp-controller="Toll" asp-action="AddCard">Add New Card</a>
                 </div>
             </form>
         </div>
