--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h7 class="mb-5 font-weight-bold">Customer ID: @Model.userId</h7>
+    <h7 class="mb-5 font-weight-bold">Customer ID: @Model.UserId</h7>
     <hr />
     <table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
         <thead>
@@ -21,7 +21,7 @@
         </thead>
         <tbody>
             @{
-                foreach (var invoice in Model.invoices)
+                foreach (var invoice in Model.Invoices)
                 {
                     <tr>
                         <td>@invoice.EntryTimestamp</td>
