Fix crash due to IndexViewModel.invoices changing to IndexViewModel.Invoices

--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
@@ -18,7 +18,7 @@
         </thead>
         <tbody>
             @{
-                foreach (var invoice in Model.invoices)
+                foreach (var invoice in Model.Invoices)
                 {
                     <tr>
                         <td>@invoice.UserId</td>
