--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexAdmin.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexAdmin.cshtml
@@ -1,7 +1,59 @@
-﻿@{
+﻿@using CSISD_Toll_Operator_Assignment.Models
+@model IndexAdminViewModel
+@{
     ViewData["Title"] = "Home";
 }
 
-<div class="container">
-
+<div class="row">
+    <div class="col-9">
+        <table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
+            <thead>
+                <tr>
+                    <th class="text-center" colspan="3">All Users</th>
+                </tr>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                </tr>
+            </thead>
+            <tbody>
+                @{
+                    foreach (var user in Model.users)
+                    {
+                        <tr>
+                            <td>@user.Id</td>
+                            <td>@user.Email</td>
+                            <td><!--Add role here--></td>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="col-3">
+        <div class="card">
+            <div class="card-body">
+                <div class="alert alert-secondary mb-3" role="alert">
+                    As an admin, you can add new toll operator and admin accounts. By default the
+                    password will be set to: <b>Test123!</b>
+                </div>
+                <form asp-controller="Home" asp-action="AddPrivilagedUser" method="post">
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" name="email" class="form-control" id="email" required placeholder="Enter email">
+                        <small class="form-text text-muted">Add an email and set a role</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="role">Role</label>
+                        <select name="role" class="form-control" id="role">
+                            <option value="toll-operator">Toll Operator</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
